--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="home-score-btn-1" onclick="increaseScoreThree()">+ 3</button>
         </div>
         <div>
-            <h3>GUEST</h3>
+            <h3>Away</h3>
             <h2 id="guest-score" class="score">0</h2>
             <button id="guest-score-btn-1" onclick="increaseGuestScoreOne()">+ 1</button>
             <button id="guest-score-btn-1" onclick="increaseGuestScoreTwo()">+ 2</button>
